fixed stuff.... overflow is back...

--- a/css/creative.css
+++ b/css/creative.css
@@ -56,7 +56,6 @@ html {
   scrollbar-width: none;  /* Hide scrollbar for Firefox */
   
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -10165,7 +10164,6 @@ header.masthead h1 {
   align-items: center;
   width: 225px;
   height: 55px;
-  background: #f4623a;
   border-radius: 999px;
 }
 .fire:hover {
